--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  zoom:120% ;
 
 }
 
@@ -16,7 +17,7 @@ a {
 }
 
 .main-img{
-  margin: 150px auto 0 ;
+  margin: 50px auto 0 ;
   height:300px ;
   width:300px;
   border-radius: 160px;
