--- a/profile_styles.css
+++ b/profile_styles.css
@@ -24,8 +24,7 @@ body {
 
 .section-header {
   width: 100%;
-  background-color: #500000;
-  /* background-color: #27bff5; */
+  background-color: #23a6d5;
   height:100px;
   padding-left:10px  ;
   padding-top:30px ;
@@ -34,10 +33,22 @@ body {
 }
 
 .section-content {
-  padding: 20px 100px ;
-  height:300px;
+  padding: 20px ;
+  padding-top:50px ;
+  /* height:300px; */
+  font-size: 1.5rem ;
 }
 
 .section-content-about {
-  height:600px;
+  /* height:600px; */
+}
+
+.custom-card {
+  margin-top:10px ;
+  font-size: 1.1rem ;
+}
+.card-desc {
+  padding: 0px 10px ;
+  margin-top:30px;
+  text-align: left;
 }
