--- a/profile_styles.css
+++ b/profile_styles.css
@@ -70,3 +70,21 @@ body {
 .publication-content {
   margin-top: 50px ;
 }
+
+.skill-section-title {
+  text-align: left;
+  margin-bottom: 40px;
+  padding-left: 15px;
+
+}
+
+.skill-tile {
+}
+
+.skill-pic {
+  height: 100px;
+}
+
+.row-second {
+  margin-top: 30px;
+}
