added tamu logo, fixed project cards and navbar brand alignment

--- a/profile_styles.css
+++ b/profile_styles.css
@@ -96,4 +96,13 @@ body {
 
 .card-project-custom {
   text-align: left;
+    font-size: 1.25rem ;
+}
+
+.card-header-custom {
+  text-align: left ;
+}
+
+.project-space {
+  margin-bottom:50px ;
 }
